--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,22 @@ header > p {
   justify-content: center;
   gap: 0.2em;
 }
+
+.word-holder {
+  display: flex;
+  justify-content: center;
+  padding: 2em;
+  gap: 2px;
+}
+
+.word-holder > span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  background-color: #323232;
+  color: #F9F4DA;
+  text-transform: uppercase;
+  border-bottom: 1px solid #F9F4DA;
+}
