--- a/src/App.css
+++ b/src/App.css
@@ -135,3 +135,16 @@ span.chip.lost::before {
   cursor: not-allowed;
   pointer-events: none;
 }
+
+button.new-game {
+  background-color: #11B5E5;
+  border: 1px solid #D7D7D7;
+  border-radius: 4px;
+  width: 225px;
+  height: 40px;
+  padding: 6px 12px;
+  display: block;
+  margin-inline: auto;
+  cursor: pointer;
+  margin-top: 2em;
+}
