--- a/src/App.css
+++ b/src/App.css
@@ -35,13 +35,22 @@ header > p {
 }
 
 .game-status {
-  background-color: #10A95B;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #F9F4DA;
   border-radius: 4px;
   margin-block: 30px;
+  min-height: 80px;
+  padding-top: 5px;
+}
+
+.game-status.won {
+  background-color: #10A95B;
+}
+
+.game-status.lost {
+  background-color: #BA2A2A;
 }
 
 .game-status > h2 {
