--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,11 @@ span.chip.lost::before {
   font-weight: 500;
 }
 
+.alphabet-holder:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+
 .key.correct {
   background-color: #10A95B;
   cursor: not-allowed;
