--- a/src/App.css
+++ b/src/App.css
@@ -171,3 +171,15 @@ button.new-game {
   cursor: pointer;
   margin-top: 2em;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
